[package]
name = "num256"
version = "0.3.1"
authors = ["Jehan <jehan.tremback@gmail.com>"]
include = [
    "**/*.rs",
    "Cargo.toml"
]
description = "Implementation of 256 bit integers"
repository = "https://github.com/althea-net/num256_rs"
license-file = "LICENSE"
edition = '2018'

[dependencies]
num = "0.4"
serde = "1.0"
num-derive = "0.3"
num-traits = "0.2"
serde_derive = "1.0"
lazy_static = "1.4"

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"
