[package]
name = "num256"
version = "0.3.5"
authors = ["Justin Kilpatrick justin@althea.net", "Jehan <jehan.tremback@gmail.com>"]
include = [
    "**/*.rs",
    "Cargo.toml"
]
description = "Implementation of 256 bit integers"
repository = "https://github.com/althea-net/num256_rs"
license-file = "LICENSE"
edition = '2021'

[dependencies]
serde = "1"

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"
