[package]
name = "num256"
version = "0.5.2"
authors = ["Justin Kilpatrick justin@althea.net", "Jehan <jehan.tremback@gmail.com>"]
include = [
    "**/*.rs",
    "Cargo.toml"
]
description = "Implementation of 256 bit integers"
repository = "https://github.com/althea-net/num256_rs"
license-file = "LICENSE"
edition = '2021'

[dependencies]
serde = "1.0"
bnum = {version = "0.5.0", features = ["numtraits"]}
num-traits = "0.2"

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
